remove mcustomscrollbar css from dependencies; bg color of loader; scroll by keyboard arrows up and down fix;

--- a/src/common/styles/__mixins.scss
+++ b/src/common/styles/__mixins.scss
@@ -285,7 +285,7 @@
   }
 
   &.page:before {
-    background-color: $bg;
+    //background-color: $bg;
     border-color: $border;
     border-top-color: $borderTop;
   }
