--- a/src/common/styles/common.scss
+++ b/src/common/styles/common.scss
@@ -28,13 +28,17 @@ body.loading {
       left: 50%;
       margin-top: -60px;
       margin-left: -60px;
-      background: #fff;
+      background: #f0f0f0;
       border: 16px solid #f2994a;
       border-top: 16px solid #f2c94c;
       border-radius: 50%;
       width: 120px;
       height: 120px;
       animation: spin 2s linear infinite;
+
+      @media screen and (max-width: 500px) {
+        background-color: #aaa;
+      }
     }
 
     @keyframes spin {
